--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DrawCircle</string>
+    <string name="action_settings">Action Settings</string>
 </resources>
